# kurento

./: .build.yaml  .clang-format  .gitignore  .gitignorei  .gitmodules  .gitreview  .jsdoc.conf.js  .mu_repo  .npmignore  .project  .readthedocs.yaml  .readthedocs.yml  BUILD_MULTIARCH.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  Execution samples.txt  FindGLIB-MKENUMS.cmake  FindKmsJsonRpc.cmake.in  FindKurentoHelpers.cmake.in  FindKurentoUtils.cmake.in  GLibHelpers.cmake  Gruntfile.js  LICENSE  Makefile  Makefile.am  NOTICE  README.md  README.txt  README_bower.md  TestHelper.cmake  VERSION  VERSIONS.conf.sh  VERSIONS.env  alvar-compat-opencv-2-3.patch  alvar-patch.sh  assembly.xml  bash.conf.sh  bower.json  (+141 more)
alvar-2.0.0-sdk-linux64-gcc44/: CMakeLists.txt
alvar-2.0.0-sdk-linux64-gcc44/data/: CMakeLists.txt  axes.osg  grid.osg  multimarker.xml
alvar-2.0.0-sdk-linux64-gcc44/include/: Alvar.h  Marker.h
alvar-2.0.0-src-opencv3/: CMakeLists.txt  CTestConfig.cmake
alvar-2.0.0-src-opencv3/data/: CMakeLists.txt
alvar-2.0.0-src-opencv3/demo/: DemoMarkerField.cpp  DemoModel2Marker.cpp  Shared.h
alvar-2.0.0-src-opencv3/doc/: CMakeLists.txt  doxygen.config.cmake
alvar-2.0.0-src-opencv3/sample/: GlutViewer.cpp  SampleCamCalib.cpp  SampleIntegralImage.cpp  SampleOptimization.cpp  SampleTrack.cpp
alvar-2.0.0-src-opencv3/src/: CMakeLists.txt  Camera.h  Draw.h  Marker.h  MarkerDetector.cpp  MultiMarker.cpp  MultiMarkerBundle.cpp
alvar-2.0.0-src-opencv3/test/: BenchmarkOverall.cpp  TestContainer3d.cpp  TestFileFormats.cpp  TestRansac.cpp  TestTrack.cpp  TestTrifocalTensor.cpp  test_calib.xml  test_matrix.xml
rtcpdemux/: CMakeLists.txt  kms-marshal.list  kmsrtcpdemux.c
server/: .clang-format  .gitignore  .mu_repo  CMakeLists.txt
server/cmake-utils/: CHANGELOG.md  CMakeLists.txt  FindKurentoUtils.cmake.in  README.md
server/cmake-utils/debian/: changelog  control  copyright  rules
server/gst-plugins-rs/: compile.sh  debian.diff
server/jsonrpc/: CHANGELOG.md  CMakeLists.txt  FindKmsJsonRpc.cmake.in  README.md  libjsonrpc.pc.in
server/jsonrpc/debian/: changelog  control  copyright  rules
server/jsonrpc/src/: JsonRpcClient.cpp  JsonRpcHandler.cpp  JsonRpcUtils.cpp
server/jsonrpc/tests/: CMakeLists.txt  TestRpc.cpp
server/media-server/: CMakeLists.txt  README.md  config.h.cmake  sdp_pattern.txt
server/media-server/debian/: changelog  control  copyright  kurento-media-server.default  kurento-media-server.postinst
server/media-server/scaffold/: CMakeLists_gstplugin.txt.template  CMakeLists_root.txt.gstreamer.template  CMakeLists_root.txt.opencv.template  config.h.cmake.template  debian-changelog.template  debian-control.gstreamer.template  debian-control.opencv.template  debian-copyright.template  gstplugin.c.template  gstplugin.cpp.template  gstplugin.h.template  kurento-module-scaffold
server/media-server/server/: CMakeLists.txt  CacheEntry.cpp  ResourceManager.cpp  ServerMethods.cpp  loadConfig.cpp  logging.cpp
server/media-server/test/: CMakeLists.txt  server_duplicate_requests.cpp  server_json_session.cpp  server_json_test.cpp
server/module-core/: CHANGELOG.md  CMakeLists.txt  README.md  config.h.cmake
server/module-core/debian/: changelog  control  copyright  rules
server/module-creator/: .gitignore  README.md  pom.xml
server/module-creator/debian/: README.source  changelog  control  copyright  maven.properties  maven.rules  rules
server/module-creator/scripts/: Manifest.txt  kurento-module-creator
server/module-elements/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  config.h.cmake
server/module-elements/debian/: changelog  control  copyright  kms-elements-dev.install  rules
server/module-elements/tests/: sdp_pattern.txt
server/module-examples/chroma/: CMakeLists.txt  README.md
server/module-examples/crowddetector/: CMakeLists.txt  README.md  config.h.cmake
server/module-examples/datachannelexample/: .gitignore  CMakeLists.txt  README.md  config.h.cmake
server/module-examples/gstreamer-example/: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.cmake
server/module-examples/markerdetector/: CMakeLists.txt  README.txt  config.h.cmake
server/module-examples/opencv-example/: .gitignore  CMakeLists.txt  README.md  config.h.cmake
server/module-examples/platedetector/: CMakeLists.txt  README.md  config.h.cmake
server/module-examples/pointerdetector/: AUTHORS  CMakeLists.txt  README.md  config.h.cmake
server/module-extras/video-sampler/: CMakeLists.txt  README.md  config.h.cmake
server/module-filters/: CHANGELOG.md  CMakeLists.txt  README.md  config.h.cmake
server/module-filters/debian/: changelog  control  (+3 more)
src/: CMakeLists.txt  JsonFixes.cpp  JsonRpcClient.cpp  JsonRpcHandler.cpp  JsonRpcUtils.cpp  JsonSerializer.hpp
src/assembly/: bin.xml
src/gst-plugins/: CMakeLists.txt  CMakeLists.txt.orig  config.h.cmake  gstgstreamerpluginsample.cpp  gstgstreamerpluginsample.h  gstsctp.c  gstsctp.h  gstsctpclientsink.c  gstsctpserversrc.c  kms-elements-marshal.list  kmsalphablending.c  kmsalphablending.h  kmsalphablendingportdata.c  kmsalphablendingportdata.h  kmsavmuxer.c  kmsbasemediamuxer.c  kmsbasemediamuxer.h  kmscompositemixer.c  kmscompositemixer.h  kmsconfcontroller.c  kmsdatachannelexample.c  kmsdispatcher.c  kmsdispatcher.h  kmsdispatcheronetomany.c  kmsdispatcheronetomany.h  kmselements.c  kmsencodingrules.h  kmsfacedetectormetadata.c  kmsfacedetectormetadata.h  kmsgenericstructure.c  kmsgenericstructure.h  kmshttpendpoint.c  kmshttpendpoint.h  kmshttpgetendpoint.c  kmshttpgetendpoint.h  kmshttppostendpoint.c  kmshttppostendpoint.h  kmsimageoverlaymetadata.c  kmsimageoverlaymetadata.h  kmsksrmuxer.c  (+38 more)
src/jsonrpc/: JsonFixes.hpp  JsonRpcClient.hpp  JsonRpcException.hpp  JsonRpcHandler.hpp  JsonRpcUtils.hpp  JsonSerializer.hpp
src/server/: CMakeLists.txt
tests/check/: CMakeLists.txt  kmstestutils.c  kmstestutils.h  valgrind.supp
tests/server/: CMakeLists.txt  constructors.cpp  playerEndpoint.cpp  recorderEndpoint.cpp  recorderEndpoint.cpp.orig  rtpEndpoint.cpp  valgrind.supp  webRtcEndpoint.cpp
(+7038 files in other folders)
